--- a/Login.html
+++ b/Login.html
@@ -78,7 +78,7 @@
             <input type="submit" value="Login">
         </form>
         <div class="switch">
-            Don't have an account? <a href="register.html">Register here</a>
+            Don't have an account? <a href="index.html">Register here</a>
         </div>
     </div>
 </body>
