--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
     <div class="container">
         <h2>Register</h2>
-        <form action="register.php" method="post">
+        <form action="index.php" method="post">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" placeholder="Enter Username" required>
             <label for="email">Email</label>
