--- a/Login.html
+++ b/Login.html
@@ -70,7 +70,7 @@
 <body>
     <div class="container">
         <h2>Login</h2>
-        <form action="login.php" method="post">
+        <form action="Login.php" method="post">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" placeholder="Enter Username" required>
             <label for="password">Password</label>
