--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <input type="submit" value="Register">
         </form>
         <div class="switch">
-            Already have an account? <a href="login.html">Login here</a>
+            Already have an account? <a href="Login.html">Login here</a>
         </div>
     </div>
 </body>
