--- a/success.html
+++ b/success.html
@@ -52,7 +52,7 @@
     <div class="container">
         <h2>Registration Successful</h2>
         <p>Your account has been created successfully!</p>
-        <a href="login.html" class="button">Click here to Login</a>
+        <a href="Login.html" class="button">Click here to Login</a>
     </div>
 </body>
 </html>
