--- a/Welcome.html
+++ b/Welcome.html
@@ -11,7 +11,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 280vh;
+            height: 320vh;
             margin: 0;
             background-image: url('BG.jpg'); /* Optional: Add background image */
             background-size: cover;
@@ -26,15 +26,18 @@
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             width:250vh;
-            height: 210vh;
+            height: 275vh;
             max-width: 1000px;
             text-align: center;
         }
         h1 {
             color: #ffffff;
-            font-size: 34px;
-            margin-bottom: 20px;
+            font-size: 54px;
+            margin-bottom: 30px;
+            text-shadow: 0 0 5px #4917ed, 0 0 10px #ff0000, 0 0 15px #281be4; 
             font-weight: bold;
+            position: relative;
+            z-index: 1;
         }
         .event-list {
             display: grid;
@@ -48,7 +51,7 @@
             background-image: url('QUIZ.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -63,7 +66,7 @@
             background-size:cover;
             background-position: center;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -78,7 +81,7 @@
             background-size:cover;
             background-position: center;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -92,7 +95,7 @@
             background-image: url('IOT.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -106,7 +109,7 @@
             background-image: url('APPVENTURE.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -120,7 +123,7 @@
             background-image: url('UI.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -134,7 +137,7 @@
             background-image: url('ML_AI.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -148,7 +151,7 @@
             background-image: url('MOM.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -162,7 +165,7 @@
             background-image: url('CF.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -176,7 +179,7 @@
             background-image: url('KAROKE.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -190,7 +193,7 @@
             background-image: url('IMAGE_FINDER.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -204,7 +207,7 @@
             background-image: url('AM.jpg'); /* Optional: Add background image */
             background-size:cover;
             padding: 25px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 25px rgba(1, 1, 1, 1);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -223,6 +226,7 @@
             padding: 8px;
             border: none;
             border-radius: 4px;
+            box-shadow: 0 3px 9px rgba(1, 1, 1, 1);
             cursor: pointer;
             text-decoration: none;
             display: inline-block;
@@ -237,19 +241,21 @@
             margin-bottom: 10px;
         }
         .white-text {
-        color: rgba(255, 255, 255, 0.751);
+        color: rgba(0, 0, 0, 0.751);
+        margin-bottom: 20px;
+        text-align: left;
         }
     </style>
 </head>
 <body>
     <div class="container">
-       
-        <p> </p>
         <h1>Welcome to SPARK'S 2024</h1>
-        <p> </p>
-        <p class="white-text">Click the below Button to Registering the Event...!</p>
+        <p class="white-text"style="font-size:19px;">SPARK'S 2024 is an innovative platform designed to inspire creativity and collaboration among students and professionals in various fields. This event features a range of engaging activities, workshops, and competitions that encourage participants to showcase their skills, learn from industry experts, and connect with like-minded individuals.</p>
+        <br>
+        <p class="white-text" style="text-align: center;">Click the below Button to Registering the Event...!</p>
         <a href="event_register.html" class="button">Click Here To Register For Event</a>
-        <p> </p>
+        <p>  </p>
+        <br>
         <p class="white-text">Click the Know more button to see the Event Descriptions...! </p>
         <div class="event-list">
             <div class="IS">
@@ -301,6 +307,15 @@
                 <a href="Aperture Magic.html" class="button">Know More</a>
             </div>
         </div>
+        <br> 
+        <br>
+            <p class="white-text"style="font-size:19px;">Benefits for Career Development:</p>
+            <p class="white-text">1.Skill Enhancement: Participants have the opportunity to attend workshops and masterclasses led by industry professionals, helping them acquire new skills and knowledge relevant to their career paths.</p>
+            <p class="white-text">2.Networking Opportunities: The event brings together a diverse group of attendees, including students, educators, and industry leaders. This creates a valuable networking environment where participants can build connections that may lead to internships, job opportunities, or collaborations.</p>
+            <p class="white-text">3.Hands-On Experience: By engaging in practical activities and challenges, attendees gain hands-on experience that is often sought after by employers. This practical exposure can enhance resumes and make candidates more attractive to potential employers.</p>
+            <p class="white-text">4.Showcasing Talent: SPARK'S 2024 provides a platform for participants to showcase their talents through competitions and presentations, allowing them to gain recognition and build their personal brand.</p>
+            <p class="white-text">5.Inspiration and Motivation: The event serves as a source of inspiration, motivating participants to pursue their career goals with renewed passion and determination..</p>
+            <br> 
     </div>
 </body>
 </html>
